jellyseerr/jellyseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: 5055
  selector:
    app: jellyseerr
