jellyseerr/jellyseerr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: scaleway
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
  labels:
    app: jellyseerr
  name: jellyseerr
  namespace: jellyseerr
spec:
  ingressClassName: nginx
  rules:
    - host: jellyseerr.public.soulkyu.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
  tls:
    - hosts:
      - jellyseerr.public.soulkyu.net
      secretName: jellyseerr.public.soulkyu.net-tls
